--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-connect": "^5.7.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "node-sass": "^4.12.0"
